<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.bright.common.widget.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/app_name" />

    <TextView
        style="@style/TextView.Main.Tip"
        android:text="@string/platform" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:minHeight="@dimen/girdle_min_h"
        android:orientation="horizontal">

        <com.bright.common.widget.SwitchButton
            android:id="@+id/name"
            style="@style/SwitchButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/gap_grade_3"
            app:backgroundDrawable="@drawable/switch_background"
            app:backgroundMeasureRatio="2"
            app:thumbDrawable="@drawable/switch_thumb" />
    </LinearLayout>

    <TextView
        style="@style/TextView.Main.Tip"
        android:text="@string/platform_settings" />

    <TextView
        style="@style/TextView.Main.Tip"
        android:text="@string/advanced_settings" />
</LinearLayout>
