<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2015  Haiyang Yu Android Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.bright.common.widget.TopBar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rightText="@string/save"
        app:text="@string/set_delay_time_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/gap_grade_2"
        android:text="@string/tip_delay_time"
        android:textColor="@color/text_color_light_normal"
        android:textSize="@dimen/I_title" />

    <com.yuhaiyang.redpacket.ui.widget.InputEdit
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/gap_grade_2"
        android:inputType="number"
        app:focusColor="@color/blue_400"
        app:hint="@string/set_delay_time_subtitle" />
</LinearLayout>
